Bug 495828 - Panel in auto-hide mode inappropriately hides again when you start dragging Task Manager tasks to re-order them
Summary: Panel in auto-hide mode inappropriately hides again when you start dragging T...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 6.2.2
Platform: Arch Linux Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 496860 497762 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-11-05 11:00 UTC by slaecker
Modified: 2025-02-10 03:48 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.1
Sentry Crash Report:


Attachments
Panel hidden while re-ordering icons (76.31 KB, video/webm)
2024-11-05 11:00 UTC, slaecker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description slaecker 2024-11-05 11:00:05 UTC
Created attachment 175544 [details]
Panel hidden while re-ordering icons

SUMMARY
When setting a panel with the icon-only task manager to auto-hide, icons can't be reordered, because the panel is hidden when dragging the icon.

STEPS TO REPRODUCE
1. Create a panel with the icon-only task manager.
2. Set the panel to auto-hide.
3. Grab an icon and try to move it to another position.

OBSERVED RESULT
Panel is hidden as soon as the icon is dragged.

EXPECTED RESULT
Panel stays visible as long as the mouse is hovering it or icons are being moved.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 6.11.6-zen1-1-zen (64-bit)
KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0

ADDITIONAL INFORMATION
-
Comment 1 Nate Graham 2024-11-05 18:46:12 UTC
Oh wow, can reproduce.

While still dragging, I can touch the screen edge to make the panel appear again. But it shouldn't hide in the first place
Comment 2 Filip 2024-11-30 12:00:33 UTC
*** Bug 496860 has been marked as a duplicate of this bug. ***
Comment 3 Filip 2024-12-21 20:18:11 UTC
*** Bug 497762 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2025-01-06 20:27:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5030
Comment 5 Nate Graham 2025-02-10 03:22:28 UTC
Git commit edb7a5f3bfa9367e7da1335a3e8bd61ca3911a98 by Nate Graham, on behalf of Tino Lorenz.
Committed on 10/02/2025 at 02:51.
Pushed by ngraham into branch 'master'.

panelview: Fix autohide panel hiding while dragging in task manager

M  +7    -1    shell/panelview.cpp
M  +1    -0    shell/panelview.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/edb7a5f3bfa9367e7da1335a3e8bd61ca3911a98
Comment 6 Nate Graham 2025-02-10 03:48:55 UTC
Git commit 851278f09346579be3aea565697670aa73cae3da by Nate Graham.
Committed on 10/02/2025 at 03:23.
Pushed by ngraham into branch 'Plasma/6.3'.

panelview: Fix autohide panel hiding while dragging in task manager


(cherry picked from commit edb7a5f3bfa9367e7da1335a3e8bd61ca3911a98)

Co-authored-by: Tino Lorenz <tilrnz@gmx.net>

M  +7    -1    shell/panelview.cpp
M  +1    -0    shell/panelview.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/851278f09346579be3aea565697670aa73cae3da