panelview: Fix autohide panel hiding while dragging in task manager

BUG: 495828